fix: dropdown menu overflows burger menu in mobile view #13

--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -71,7 +71,7 @@ $container-default: 1160px;
 /* z-indexes */
 $z-index-header-logo: 10;
 $z-index-header-nav: 9;
-$z-index-header: 1;
+$z-index-header: 8;
 
 $z-index-burger-button: 10;
 $z-index-burger-bg: 8;
